cabal-version: 2.4
name:          anal
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Copyrite, Tony Day, 2023-
license: BSD-3-Clause
homepage: https://github.com/tonyday567/anal#readme
bug-reports: https://github.com/tonyday567/anal/issues
build-type: Simple
tested-with: GHC == 9.4.4
source-repository head
  type: git
  location: https://github.com/tonyday567/anal

common common-options
  build-depends:
    base >=4.7 && <5
  default-language:
    Haskell2010

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -fwrite-ide-info
    -hiedir=.hie

library
  import: common-options
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    time,
    flatparse,
    bytestring,
    mealy,
    profunctors,
    numhask-space,
    numhask,
    containers,
    formatn,
    text,
  exposed-modules:
    Anal

