cabal-version: 3.0
name: anal
version: 0.0.4
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2023
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/anal#readme
bug-reports: https://github.com/tonyday567/anal/issues
synopsis: analysis
description: Analysis: the prefix
build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.6.5
    , GHC == 9.8.2
extra-doc-files:
    readme.md

source-repository head
    type: git
    location: https://github.com/tonyday567/anal

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , base         >=4.7 && <5
        , bytestring   >=0.11.3 && <0.13
        , chart-svg    >=0.6 && <0.8
        , containers   >=0.6 && <0.8
        , faker
        , flatparse    >=0.3.5 && <0.6
        , markup-parse >=0.1 && <0.2
        , mealy        >=0.4 && <0.6
        , numhask      >=0.10 && <0.13
        , optics-core  >=0.4 && <0.5
        , prettychart  >=0.2 && <0.3
        , profunctors  >=5.6.2 && <5.7
        , text         >=1.2 && <2.2
        , time         >=1.9 && <1.15
        , web-rep      >=0.11 && <0.13
    exposed-modules:
        Anal
        Anal.Returns

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , QuickCheck       >=2.14 && <2.16
        , base             >=4.14 && <5
        , doctest-parallel >=0.3 && <0.4
    default-extensions: RebindableSyntax
    ghc-options: -threaded
    type: exitcode-stdio-1.0
