cabal-version: 3.0
name: anal
version: 0.0.4
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2023
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/anal#readme
bug-reports: https://github.com/tonyday567/anal/issues
synopsis: analysis
description: Analysis: the prefix
build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.6.5
    , GHC == 9.8.2
extra-doc-files:
    readme.md

source-repository head
    type: git
    location: https://github.com/tonyday567/anal

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , base         >=4.7 && <5
        , bytestring   >=0.11.3 && <0.13
        , chart-svg    >=0.6 && <0.8
        , containers   >=0.6 && <0.8
        , faker
        , flatparse    >=0.3.5 && <0.6
        , formatn
        , harpie       >=0.1 && <0.2
        , markup-parse >=0.1 && <0.2
        , mealy        >=0.4 && <0.6
        , numhask      >=0.10 && <0.13
        , numhask-space
        , optics-core  >=0.4 && <0.5
        , prettychart  >=0.2 && <0.3
        , prettyprinter
        , pretty-simple >=4.1 && <4.2
        , profunctors  >=5.6.2 && <5.7
        , text         >=1.2 && <2.2
        , time         >=1.9 && <1.15
        , web-rep      >=0.11 && <0.13
    exposed-modules:
        Anal
        Anal.Returns

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , QuickCheck       >=2.14 && <2.16
        , base             >=4.14 && <5
        , doctest-parallel >=0.3 && <0.4
    default-extensions: RebindableSyntax
    ghc-options: -threaded
    type: exitcode-stdio-1.0

common ghc-options-exe-stanza
    ghc-options:
        -fforce-recomp
        -funbox-strict-fields
        -rtsopts
        -threaded
        -with-rtsopts=-N

executable anal-play
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: play.hs
    hs-source-dirs: app
    build-depends:
        , anal
        , base                 >=4.7 && <5
        , box                  >=0.9 && <0.10
        , bytestring
        , chart-svg
        , markup-parse         >=0.1 && <0.2
        , optics-core          >=0.4 && <0.5
        , optparse-applicative >=0.17 && <0.19
        , web-rep
        , time
        , numhask-space

executable anal-speed
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: anal-speed.hs
    hs-source-dirs: app
    build-depends:
        , anal
        , optics-core
        , base                 >=4.7 && <5
        , clock                >=0.8 && <0.9
        , containers           >=0.6 && <0.8
        , deepseq              >=1.4.4 && <1.6
        , formatn              >=0.2.1 && <0.4
        , mtl                  >=2.2.2 && <2.4
        , optparse-applicative >=0.17 && <0.19
        , perf
        , text                 >=1.2 && <2.2
        , time
        , mealy
        , harpie
        , tdigest
    ghc-options: -O2
